EKS/Python/k8s/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-monitoring
  namespace: ml-pipeline
  labels:
    app: monitoring
spec:
  type: ClusterIP
  ports:
  - name: prometheus
    port: 9090
    targetPort: 9090
  - name: grafana
    port: 3001
    targetPort: 3000
  selector:
    app: monitoring
